fix(run): honor manifest launcher flags (#2439)
* fix(run): honor manifest launcher flags

* fix(run): remove module guard and match java -jar native-access errors

* Pass through Enable-Native-Access and add comprehensive tests

Changes:
- Replace validation with pass-through for Enable-Native-Access
  - Let JVM validate values instead of JBang
  - Consistent with how we handle Add-Opens/Add-Exports
  - Simpler code, future-proof if spec changes

- Add addManifestOptions() helper
  - Similar to addAllUnnamedManifestOptions but without =ALL-UNNAMED suffix
  - Used for Enable-Native-Access which passes values directly

- Update tests:
  - Replace testRejectsInvalidEnableNativeAccess with testPassesThroughEnableNativeAccessModuleName
  - Add testReadingAddExportsWithHelper (using new createJar() helper)
  - Add edge case tests:
    * testEmptyManifestAttributeIgnored (whitespace-only values)
    * testMultipleSpacesBetweenValues (multiple spaces between values)
    * testMultipleModulesForEnableNativeAccess (space-separated module list)

- Add documentation:
  - New "JAR Manifest Attributes" section in running.adoc
  - Documents Add-Opens, Add-Exports, Enable-Native-Access
  - Explains how values are passed to JVM
  - Links to JAR spec and JEP 472
  - References issue #2441 for --ignore-manifest flag

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

---------

Co-authored-by: Max Rydahl Andersen <max@xam.dk>
Co-authored-by: Claude Sonnet 4.5 <noreply@anthropic.com>